# ScriptEngine

./: .\logs\00000-MacOpenwindowToClosedwindow-2023-03-04 21-53-02\completed.txt  .\logs\00000-MacOpenwindowToClosedwindow-2023-03-04 21-56-24\completed.txt  .\logs\00000-MacOpenwindowToClosedwindow-2023-03-04 21-58-01\completed.txt  .\logs\00000-MacOpenwindowToClosedwindow-2023-03-04 21-58-01\stdout.txt  .gitignore  CMakeCache.txt  CMakeLists.txt  DDrive.lnk  LICENSE  README.md  ScriptEngine.cpp  adb_host_controller.py  adb_screen_recorder.spec  avd_controller.py  click_action_helper.py  click_path_generator.py  clip_analyzer_api.py  clip_analyzer_startup.sh  copy-external.py  deployment_helper.py  detect_object_helper.py  detect_scene_helper.py  diffs.json  diffs.npy  feature_matcher.py  file_transfer_host.py  file_transfer_host_app.py  frameDiffData.json  freeze_setup.py  geteventanalysis.py  image_matcher.py  logVideoRunStart.bat  logVideoRunStart.sh  osx_controller.py  packaging_script.cmd  packaging_script.sh  profile.html  profile.json  python_host_controller.py  quick_script.py  (+29 more)
.\scripts\scriptLibrary/: props.json
ImageMatcher/: CMakeLists.txt  image_matcher.cpp
LogsViewer/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
ScriptEngine/: __init__.py  adb_host_controller.py  app_constants.py  click_action_helper.py  click_path_generator.py  color_compare_helper.py  custom_process_pool.py  custom_thread_pool.py  detect_object_helper.py  detect_scene_helper.py  device_action_interpeter.py  device_controller.py  device_manager.py  tests.py  (+26 more)
(+507 files in other folders)
